# ai-commit-generator

./: .env.example  .gitignore  LICENSE  README.md  ai_commit.py  commit_generator.py  install_hook.py  pyproject.toml  requirements.txt  test_commit_generator.py
