[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-commit-generator"
version = "1.0.0"
description = "AI-powered git commit message generator using GPT-5 and conventional commits"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Stelios Spanos", email = "stylspan19@gmail.com"}
]
keywords = ["git", "commit", "ai", "conventional-commits", "openai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SteliosSpanos/ai-commit-generator"
Repository = "https://github.com/SteliosSpanos/ai-commit-generator.git"
Issues = "https://github.com/SteliosSpanos/ai-commit-generator/issues"
Documentation = "https://github.com/SteliosSpanos/ai-commit-generator#readme"
Changelog = "https://github.com/SteliosSpanos/ai-commit-generator/releases"

[project.scripts]
ai-commit = "ai_commit:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
py-modules = ["commit_generator", "ai_commit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]